# HyperColPack

./: .gitignore  Makefile.am  configure.ac
HyperColPack/: Makefile.am
HyperColPack/colpack/: Makefile  test_colpack.cpp
HyperColPack/include/: Makefile.am  hyper_edge.hpp  hyper_graph.hpp  hyper_symmetric_partition.hpp  hypercol.hpp  multi_index.hpp  multi_index_set.hpp
HyperColPack/src/: Makefile.am  hyper_edge.cpp  hyper_symmetric_partition.cpp  hypercol.cpp
HyperColPack/test/: Makefile.am  hyper_graph_test.cpp  hyper_random  hyper_random.cpp  hypercol_test  hypercol_test.cpp  multi_index_test.cpp
