AC_INIT(HyperColPack, 1.0, wangmu0701@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_MACRO_DIR([m4])

LT_INIT
AC_PROG_CXX

AC_CONFIG_FILES(Makefile
                HyperColPack/Makefile
                HyperColPack/src/Makefile
                HyperColPack/include/Makefile
                HyperColPack/test/Makefile)

AC_OUTPUT
