AM_CPPFLAGS = --std=c++11 -I$(top_builddir)/HyperColPack/include

noinst_PROGRAMS = hyper_graph_test

#hypercol_test_SOURCES = hypercol_test.cpp
#hypercol_test_LDADD = $(top_builddir)/HyperColPack/libhypercolpack.la

#multi_index_test_SOURCES = multi_index_test.cpp
#multi_index_test_LDADD = $(top_builddir)/HyperColPack/libhypercolpack.la

hyper_graph_test_SOURCES = hyper_graph_test.cpp
hyper_graph_test_LDADD = $(top_builddir)/HyperColPack/libhypercolpack.la
